--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -177,6 +177,7 @@
     <ResourceCompile Include="Client.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Codes\AnimationCtrl.cpp" />
     <ClCompile Include="..\Codes\AnimationCtrl_Object.cpp" />
     <ClCompile Include="..\Codes\Base.cpp" />
     <ClCompile Include="..\Codes\BlockObj.cpp" />
@@ -188,7 +189,9 @@
     <ClCompile Include="..\Codes\ComponentSystem.cpp" />
     <ClCompile Include="..\Codes\Component_Object.cpp" />
     <ClCompile Include="..\Codes\CreativeMode.cpp" />
+    <ClCompile Include="..\Codes\DynamicMesh.cpp" />
     <ClCompile Include="..\Codes\DynamicMeshRenderer_Object.cpp" />
+    <ClCompile Include="..\Codes\DynamicRendererSystem.cpp" />
     <ClCompile Include="..\Codes\Entity.cpp" />
     <ClCompile Include="..\Codes\EntityManager.cpp" />
     <ClCompile Include="..\Codes\Frame.cpp" />
@@ -197,6 +200,7 @@
     <ClCompile Include="..\Codes\GameMode.cpp" />
     <ClCompile Include="..\Codes\GameObject.cpp" />
     <ClCompile Include="..\Codes\GraphicDevice.cpp" />
+    <ClCompile Include="..\Codes\HierarchyLoader.cpp" />
     <ClCompile Include="..\Codes\HierarchyLoader_Object.cpp" />
     <ClCompile Include="..\Codes\InputDevice.cpp" />
     <ClCompile Include="..\Codes\KeyManager.cpp" />
@@ -265,6 +269,7 @@
     <ClInclude Include="..\External\easy_profiler\easy\serialized_block.h" />
     <ClInclude Include="..\External\easy_profiler\easy\utility.h" />
     <ClInclude Include="..\External\easy_profiler\easy\writer.h" />
+    <ClInclude Include="..\Headers\AnimationCtrl.h" />
     <ClInclude Include="..\Headers\AnimationCtrl_Object.h" />
     <ClInclude Include="..\Headers\Base.h" />
     <ClInclude Include="..\Headers\BlockObj.h" />
@@ -279,7 +284,9 @@
     <ClInclude Include="..\Headers\Component_Object.h" />
     <ClInclude Include="..\Headers\CreativeMode.h" />
     <ClInclude Include="..\Headers\Defines.h" />
+    <ClInclude Include="..\Headers\DynamicMesh.h" />
     <ClInclude Include="..\Headers\DynamicMeshRenderer_Object.h" />
+    <ClInclude Include="..\Headers\DynamicRendererSystem.h" />
     <ClInclude Include="..\Headers\Entity.h" />
     <ClInclude Include="..\Headers\EntityManager.h" />
     <ClInclude Include="..\Headers\Frame.h" />
@@ -290,6 +297,7 @@
     <ClInclude Include="..\Headers\GameObject.h" />
     <ClInclude Include="..\Headers\Global.h" />
     <ClInclude Include="..\Headers\GraphicDevice.h" />
+    <ClInclude Include="..\Headers\HierarchyLoader.h" />
     <ClInclude Include="..\Headers\HierarchyLoader_Object.h" />
     <ClInclude Include="..\Headers\InputDevice.h" />
     <ClInclude Include="..\Headers\KeyManager.h" />
